# dd-trace-py

./: %262  .api.yaml  .clang-format  .codespellignorelines  .coveragerc  .cursorrules  .dd-apm-context.json  .dockerignore  .dynamic-build.yml  .env  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .gitlint  .gitmodules  .mergify.yml  .pre-commit-config.yaml  .public_api  .readthedocs.yml  .vale.ini  ADAPTIVE_SAMPLING_RD_PROPOSAL.md  AGENTS.md  AI_GUIDELINES.md  BYTECODE_INJECTION_EXAMPLE.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONDITIONAL_WRAPPING_ANALYSIS.md  CONDITIONAL_WRAPPING_SUMMARY.md  CVE-2024-53908-README.md  Dockerfile  Dockerfile.appsec  Dockerfile.buster  FORK_SAFETY_SOLUTION.md  IAST_STREAMING_TESTS.md  LICENSE  LICENSE.Apache  LICENSE.BSD3  LOCK_PROFILER_OPTIMIZATION_README.md  (+158 more)
dd-otel-instrumentor/: .gitignore  README.md  pyproject.toml  setup.py
dd-otel-instrumentor/dd_otel_instrumentor/: __init__.py
dd_otel_instrumentor/: .gitignore  README.md  pyproject.toml  setup.py
dd_otel_instrumentor/dd_otel_instrumentor/: __init__.py
ddtrace-internal/: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  setup.py
ddtrace-internal/.gitlab/: release.yml  validate-ddtraceinternal-package.py
ddtrace-internal/.gitlab/scripts/: build-sdist.sh  build-wheel-helpers.sh  build-wheel-windows.sh
ddtrace-internal/src/ddtrace_internal/: __init__.py
ddtrace/appsec/_ddwaf/: CMakeLists.txt  __init__.py  ddwaf_types.py  default_ddwaf_rules.c  json2ddwaf.c  waf.py  waf_mock.py  waf_stubs.py
ddtrace/appsec/_iast/: CMakeLists.txt  __init__.py  _handlers.py  _hardcoded_secret_analyzer.py  _hardcoded_secret_reporter.py  _hardcoded_secrets.py  _iast_env.py  _iast_request_context.py  _iast_request_context_base.py  _langchain.py  _listener.py  _loader.py  _logs.py  _metrics.py  _overhead_control_engine.py  _patch.py  _patch_modules.py  _pytest_plugin.py  _span_metrics.py  _stacktrace.c  _stacktrace.pyi  _stacktrace_py2.py  _taint_dict.py  _taint_utils.py  _utils.py  auto.py  constants.py  debug_propagation.py  main.py  processor.py  reporter.py
ddtrace/cmake/abseil/: CMakeLists.txt
ddtrace/internal/: CMakeLists.txt  README.md  _buffer.pyx  _config_facts.py  _context.py  _core.pyi  _crashtracker.pyi  _crashtracker.pyx  _encoding.pyi  _encoding.pyx  _exceptions.py  _file_queue.py  _instrumentation_enabled.py  _module_handler.py  _queue.pyx  _rand.c  _rand.pyi  _rand.pyx  _service_state.py  _stdint.h  _stubs.py  _stubs_config.py  _stubs_core.py  _stubs_logging.py  _stubs_vendor.py  _tagset.pyi  _tagset.pyx  _telemetry.py  _threads.cpp  _threads.pyi  _unpatched.py  _utils.h  agent.py  assembly.py  atexit.py  buffer.py  codeowners.py  compat.py  constants.py  context_manager.py  (+65 more)
ddtrace/internal/_threads/: lock.hpp
ddtrace/internal/accupath/: README.md  __init__.py  encoding.py  pathway_context.py  payload_pb2.py  payload_pb2.pyi  processor.py  service_context.py
ddtrace/internal/acupath/: __init__.py  payload_pb2.py  payload_pb2.pyi  processor.py
ddtrace/internal/aiguard/: product.py
ddtrace/internal/aiohttp_jinja2/: patch.py
ddtrace/internal/aiomysql/: patch.py
ddtrace/internal/aiopg/: patch.py
ddtrace/internal/appsec/: product.py  prototypes.py
ddtrace/internal/bytecode_injection/: __init__.py  core.py
ddtrace/internal/ci/: __init__.py  coverage.py  encoding.py  filters.py  recorder.py  writer.py
ddtrace/internal/ci_visibility/: __init__.py  _api_client.py  _api_responses_cache.py  constants.py  context.py  coverage.py  coverage_utils.py  encoder.py  errors.py  filters.py  git_client.py  git_data.py  recorder.py  runtime_coverage.py  runtime_coverage_writer.py  service_registry.py  settings.py  utils.py  writer.py
ddtrace/internal/config/: __init__.py  _config.pyi
ddtrace/internal/core/: __init__.py  _core.pyi  crashtracker.py  crashtracker_exe.py  crashtracking.py  event_hub.py  events.py  subscriber.py
ddtrace/internal/coverage/: _native.c  _native.pyi  code.py  config.py  factory.py  fast.py  fast_collector.py  fast_coverage.py  fast_instrumentation.py  fast_instrumentation_py3_10.py  fast_instrumentation_py3_11.py  fast_instrumentation_py3_12.py  fast_instrumentation_py3_13.py  fast_instrumentation_py3_14.py  fast_instrumentation_py3_8.py  installer.py  instrumentation.py  instrumentation_py3_10.py  instrumentation_py3_10_new.py  instrumentation_py3_11.py  instrumentation_py3_12.py  instrumentation_py3_12_filelevel.py  instrumentation_py3_13.py  instrumentation_py3_14.py  instrumentation_py3_16.py  instrumentation_py3_7.py  instrumentation_py3_8.py  instrumentation_py3_9.py  instrumentation_py3_fallback.py  lines.py  multiprocessing_coverage.py  report.py  threading_coverage.py  util.py
ddtrace/internal/datastreams/: __init__.py  aio_pika.py  aiokafka.py  botocore.py  data_streams_ctx.py  encoding.py  faststream.py  fnv.py  google_cloud_pubsub.py  kafka.py  kombu.py  processor.py  stats_aggregator.py  transport.py
ddtrace/internal/dist_computing/: utils.py
ddtrace/profiling/: CMakeLists.txt  __init__.py  __init__.pyi  __main__.py  _asyncio.py  _build.pyi  _build.pyx  _faulthandler.py  _gevent.py  _line2def.py  _metadata.py  _nogevent.py  _periodic.py  _service.py  _threading.pxd  _threading.pyi  _threading.pyx  _wrap.py  auto.py  code_provenance.py  event.py  product.py  profiler.py  recorder.py  scheduler.py  serverless_scheduler.py  utils.py
src/core/: Cargo.toml  ddsketch.rs  lib.rs  rate_limiter.rs
src/native/: Cargo.toml  build.rs  config.rs  config_cache.rs  context_provider.rs  contextvar.rs  cpython_internal.c  cpython_internal.h  crashtracker.rs  ddsketch.rs  event_hub.rs  events.rs  ffande.rs  ffe.rs  importlib_metadata.rs  json.rs  lib.rs  library_config.rs  log.rs  memalloc.rs  otel_thread_ctx.rs  otel_thread_ctx.version  py_string.rs  rand.rs  rc_shm.rs  remote_config.rs  span.rs  span_attributes.rs  span_event.rs  span_serializer.rs  tls-dynamic-list.txt  tracer_flare.rs  utils.rs
src/native_heap_gotter/: Cargo.toml  lib.rs
tests/deadlock/: CMakeLists.txt  __init__.py  conftest.py  test_deadlock.py
(+48720 files in other folders)
